# signet-account

./: .gitignore  .gitmodules  4437.txt  Cargo.toml  LICENSE.md  Makefile  README.md  highlighting.json  read-wasm-output.sh
.cargo/: config
contracts/account-creator/: Cargo.toml  README.md
contracts/account-creator/examples/: schema.rs
contracts/account-creator/schema/: config.json  execute_msg.json  instantiate_msg.json  query_msg.json  reply_msg.json
contracts/account-creator/src/: colors.rs  contract.rs  juno-test.json  lib.rs  parse_reply_instantiate.rs  sudo.rs  tests_helpers.rs  tests_integration.rs  tests_pair_registry.rs  tests_setup.rs
contracts/dummy/dummy-counter-executable/: Cargo.toml  NOTICE  README.md
contracts/dummy/dummy-counter-executable/examples/: schema.rs
contracts/dummy/dummy-counter-executable/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
contracts/dummy/dummy-price-contract/: Cargo.toml  Importing.md  README.md
contracts/dummy/dummy-price-contract/examples/: schema.rs
contracts/dummy/dummy-price-contract/schema/: instantiate_msg.json  query_msg.json  reverse_simulation_response.json  simulation_response.json  state.json
contracts/dummy/dummy-price-contract/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/fee-manager/: Cargo.toml  README.md
contracts/fee-manager/examples/: schema.rs
contracts/fee-manager/schema/: execute_msg.json  fee_details_response.json  instantiate_msg.json  query_msg.json
contracts/fee-manager/src/: contract.rs  contract_tests.rs  lib.rs  msg.rs  state.rs
contracts/obi-account-common/asset-unifier/: Cargo.toml
contracts/obi-account-common/asset-unifier/examples/: schema.rs
contracts/obi-account-common/asset-unifier/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/obi-account-common/asset-unifier/src/: contract.rs  error.rs  lib.rs  state.rs  tests_contract.rs  tests_helpers.rs  tests_pair_contract.rs
contracts/obi-account-common/debtkeeper/: Cargo.toml
contracts/obi-account-common/debtkeeper/examples/: schema.rs
contracts/obi-account-common/debtkeeper/schema/: execute_msg.json  instantiate_msg.json  legacy_owner_response.json  outstanding_debt_response.json  query_msg.json
contracts/obi-account-common/debtkeeper/src/: contract.rs  lib.rs  state.rs  tests_contract.rs  tests_helpers.rs
contracts/obi-account-common/eth-interpreter/: Cargo.toml
contracts/obi-account-common/eth-interpreter/examples/: schema.rs
contracts/obi-account-common/eth-interpreter/schema/: execute_msg.json  parse_user_op_response.json  query_msg.json
contracts/obi-account-common/eth-interpreter/src/: contract.rs  contract_tests.rs  lib.rs  msg.rs
contracts/obi-account-common/gatekeeper-message/: Cargo.toml  README.md
contracts/obi-account-common/gatekeeper-message/examples/: schema.rs
contracts/obi-account-common/gatekeeper-message/schema/: authorizations.json  instantiate_msg.json  query_msg.json
contracts/obi-account-common/gatekeeper-message/src/: contract.rs  contract_tests.rs  state.rs
contracts/obi-account-common/gatekeeper-spendlimit/: Cargo.toml
contracts/obi-account-common/gatekeeper-spendlimit/examples/: schema.rs
contracts/obi-account-common/gatekeeper-spendlimit/schema/: can_spend_response.json  query_msg.json
contracts/obi-account-common/gatekeeper-spendlimit/src/: contract.rs  lib.rs  state.rs  tests_contract.rs  tests_helpers.rs  tests_state.rs
contracts/obi-account-common/pair-registry/: Cargo.toml
contracts/obi-account-common/pair-registry/examples/: schema.rs
contracts/obi-account-common/pair-registry/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/obi-account-common/user-account/: Cargo.toml
contracts/obi-account-common/user-account/examples/: schema.rs
contracts/obi-account-common/user-account/schema/: can_execute_response.json  execute_msg.json  gatekeeper_code_ids.json  gatekeeper_contracts_response.json  instantiate_msg.json  legacy_owner_response.json  pending_owner_response.json  query_msg.json  signers_response.json
contracts/obi-account-common/user-account/src/: contract.rs  contract_tests.rs  lib.rs
contracts/obi-account/premigrate_user-entry/: Cargo.toml  README.md
contracts/obi-account/user-entry/: Cargo.toml  README.md
contracts/obi-account/user-entry/examples/: schema.rs
contracts/obi-account/user-entry/schema/: execute_msg.json  query_msg.json
contracts/obi-account/user-entry/src/: contract.rs  contract_tests.rs
contracts/obi-account/user-state/: Cargo.toml  README.md
contracts/obi-account/user-state/examples/: schema.rs
contracts/obi-account/user-state/schema/: abstraction_rules.json  execute_msg.json  instantiate_msg.json  last_activity_response.json  query_msg.json
contracts/obi-account/user-state/src/: contract.rs  contract_tests.rs  lib.rs  state.rs
contracts/secret-share-signer-local/: Cargo.toml  Readme.md
contracts/secret-share-signer-local/mpc-ecdsa-wasm/: mpc_ecdsa_wasm.d.ts  mpc_ecdsa_wasm.js  mpc_ecdsa_wasm_bg.wasm  mpc_ecdsa_wasm_bg.wasm.d.ts  package.json
contracts/secret-share-signer-local/src/: contract.rs  contract_execute.rs  contract_instantiate.rs  contract_query.rs  errors.rs  lib.rs  msg.rs  state.rs
contracts/secret-share-signer-local/src/multi_party_ecdsa/: local_signature.rs  mod.rs  rounds.rs
contracts/secret-share-signer-local/src/test/: mod.rs  simulation.rs  test_execute.rs  utils.rs
contracts/secret-share-signer-local/src/utils/: sha3.rs
contracts/secret-share-signer-local/tests/: .env.devnet  .env.local  .gitignore  Makefile  code_details.json  index.html  package.json  tsconfig.json
contracts/secret-share-signer-local/tests/test/: client.ts  contract_dict.ts  create_signers_and_pre_sign.ts  eth_user_op.ts  helpers.ts  integration.test.ts  integration_setup.ts  key_refresh_distributed.ts  keygen.ts  mpc-ecdsa-wasm-types.ts  round-based.ts  secretjs_utils.ts  signature.ts  signing_offline_stage_distributed.ts  test_functions.ts  tester.ts
schema/: instantiate_msg.json
(+9 files in other folders)
