[package]
name = "account-creator"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["secretwasm"]
cosmwasm = ["osmosis-std", "cw0", "cw1", "cw2", "cw20", "cw20-base", "cosmwasm-std", "cw-storage-plus"]
secretwasm = ["secret-cosmwasm-std", "secret-toolkit", "secret-macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
classes = { path = "../../packages/classes" }
common = { path = "../../packages/common" }
macros = { path = "../../packages/macros" }
secret-macros = { path = "../../packages/secret_macros", optional = true }

asset-unifier = { path = "../obi-account-common/asset-unifier" }
debtkeeper = { path = "../obi-account-common/debtkeeper" }
gatekeeper-spendlimit = { path = "../obi-account-common/gatekeeper-spendlimit" }
gatekeeper-message = { path = "../obi-account-common/gatekeeper-message" }
pair-registry = { path = "../obi-account-common/pair-registry" }
user-account = { path = "../obi-account-common/user-account" }
user-entry = { path = "../obi-account/user-entry" }
user-state = { path = "../obi-account/user-state" }

cosmwasm-std = { version = "1.1.6", optional = true, features = ["staking"] }
cw-storage-plus = { version = "1.0.1", optional = true}
cw0 = { version = "0.10.3", optional = true }
cw1 = { version = "1.0.1", optional = true }
cw2 = { version = "1.0.1", optional = true }
cw20 = { version = "1.0.1", optional = true }
cw20-base = { version = "1.0.1", optional = true }
secret-cosmwasm-std = { version = "1.1.11", optional = true, features = ["staking"] }
secret-toolkit = { version = "0.10.0", optional = true, default-features = false, features = ["utils", "storage", "serialization"] }
osmosis-std = { version = "0.15.3", optional = true }

hex = "0.4.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
thiserror = { version = "1.0.21" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
dummy-counter-executable = { path = "../dummy/dummy-counter-executable" }
dummy-price-contract = { path = "../dummy/dummy-price-contract" }