[package]
name = "dummy-price-contract"
version = "0.3.4"
authors = ["ntropian <pete@obi.money>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["secretwasm"]
cosmwasm = ["osmosis-std", "cw2", "cosmwasm-std", "cw-storage-plus", "cosmwasm-storage"]
secretwasm = ["secret-cosmwasm-std", "secret-toolkit", "secret-macros"]

[dependencies]
cosmwasm-schema = "1.0.0"
cw2 = { version = "0.13.2", optional = true }
classes = { version = "0.1.0", path = "../../../packages/classes" }
common = { path = "../../../packages/common" }
macros = { path = "../../../packages/macros" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
osmosis-std = { version = "0.15.3", optional = true }

cosmwasm-storage = { version = "1.0.0", optional = true }
cosmwasm-std = { version = "1.1.6", optional = true }
cw-storage-plus = { version = "1.0.1", optional = true}
secret-cosmwasm-std = { version = "1.1.11", optional = true, features = ["staking"] }
secret-toolkit = { version = "0.10.0", optional = true, default-features = false, features = ["utils", "storage", "serialization"] }
secret-macros = { path = "../../../packages/secret_macros", optional = true }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.16.4"
