[package]
name = "eth-interpreter"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["secretwasm"]
cosmwasm = ["cosmwasm-std", "cw-storage-plus"]
secretwasm = ["secret-cosmwasm-std", "secret-macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
classes = { version = "0.1.0", path = "../../../packages/classes" }
common = { path = "../../../packages/common" }
macros = { path = "../../../packages/macros" }
secret-macros = { path = "../../../packages/secret_macros", optional = true }

cosmwasm-schema = "1.2.5"
cosmwasm-std = { version = "1.1.6", optional = true, features = ["staking"] }
cw-storage-plus = { version = "1.0.1", optional = true }
secret-cosmwasm-std = { version = "1.1.11", optional = true, features = ["staking"] }

schemars = "0.8.3"
#semver = "1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
uniserde = { path = "../../../packages/uniserde" }
