[package]
name = "gatekeeper-message"
version = "0.5.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["secretwasm"]
cosmwasm = ["cw2", "cw-utils", "cosmwasm-std", "cw-storage-plus"]
secretwasm = ["secret-cosmwasm-std", "secret-toolkit", "secret-macros"]

[dependencies]
classes = { version = "0.1.0", path = "../../../packages/classes" }
common = { path = "../../../packages/common" }
eth-interpreter = { path = "../eth-interpreter" }
macros = { path = "../../../packages/macros" }
secret-macros = { path = "../../../packages/secret_macros", optional = true }

cosmwasm-std = { version = "1.1.6", optional = true, features = ["staking"] }
cw2 = { version = "1.0.1", optional = true }
cw-storage-plus = { version = "1.0.1", optional = true}
cw-utils = { version = "1.0.1", optional = true }
secret-cosmwasm-std = { version = "1.1.11", optional = true, features = ["staking"] }
secret-toolkit = { version = "0.10.0", optional = true, default-features = false, features = ["utils", "storage", "serialization"] }

#semver = "1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde-json-wasm = { git = "https://github.com/chris-ricketts/serde-json-wasm", branch = "rm-err-fmt" }
serde-json-value-wasm = { git = "https://github.com/chris-ricketts/serde-json-value-wasm", branch = "fix-float-inclusion-patched" }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
