[package]
name = "gatekeeper-spendlimit"
version = "0.5.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["secretwasm"]
cosmwasm = ["cw1", "cw2", "cw20", "cw-utils", "cosmwasm-std", "cw-storage-plus"]
secretwasm = ["secret-cosmwasm-std", "secret-toolkit", "secret-macros"]

[dependencies]
classes = { version = "0.1.0", path = "../../../packages/classes" }
common = { path = "../../../packages/common" }
macros = { path = "../../../packages/macros" }
secret-macros = { path = "../../../packages/secret_macros", optional = true }
uniserde = { path = "../../../packages/uniserde" }

cosmwasm-std = { version = "1.1.6", optional = true, features = ["staking"] }
cw1 = { version = "1.0.1", optional = true }
cw2 = { version = "1.0.1", optional = true }
cw20 = { version = "1.0.1", optional = true }
cw-storage-plus = { version = "1.0.1", optional = true}
cw-utils = { version = "1.0.1", optional = true }
secret-cosmwasm-std = { version = "1.1.11", optional = true, features = ["staking"] }
secret-toolkit = { version = "0.10.0", optional = true, default-features = false, features = ["utils", "storage", "serialization"] }

schemars = "0.8.3"
#semver = "1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }