[package]
name = "user-entry"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["secretwasm"]
cosmwasm = ["osmosis-std", "cw1", "cw2", "cw-utils", "cosmwasm-std", "cw-storage-plus"]
secretwasm = ["secret-cosmwasm-std", "secret-macros", "secret-toolkit"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
classes = { version = "0.1.0", path = "../../../packages/classes" }
common = { path = "../../../packages/common" }
macros = { path = "../../../packages/macros" }
secret-macros = { path = "../../../packages/secret_macros", optional = true }

gatekeeper-spendlimit = { path = "../../obi-account-common/gatekeeper-spendlimit" }
gatekeeper-message = { path = "../../obi-account-common/gatekeeper-message" }

cosmwasm-std = { version = "1.1.6", optional = true, features = ["staking"] }
cw-storage-plus = { version = "1.0.1", optional = true }
cw1 = { version = "1.0.1", optional = true }
cw2 = { version = "1.0.1", optional = true }
cw-utils = { version = "1.0.1", optional = true }
secret-cosmwasm-std = { version = "1.1.11", optional = true, features = ["staking"] }
secret-toolkit = { version = "0.10.0", optional = true, default-features = false, features = ["utils", "storage", "serialization"] }
osmosis-std = { version = "0.15.3", optional = true }

serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
#semver = "1"
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
dummy-counter-executable = { path = "../../dummy/dummy-counter-executable" }
